@@ -109,8 +109,6 @@ NOTE: sorry, this is very raw :)
 - preferences dialog is awful
 + do something if opening docs fail!
 
-+ upon opening Aria, horizontal scrollbar is slightly too short. it goes back into place when editing notes (selecting by dragging)
-
 + when wait dialog appears, you can still edit tracks and do operations that may be harmful to current process.
     yet you can't make it modal otherwise the background process stops.
 
